# coxeter

./: .bumpversion.cfg  .coverage  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.md  ChangeLog.rst  ContributorAgreement.md  Credits.rst  LICENSE  MANIFEST.in  README.md  README.rst  bitbucket-pipelines.yml  contributors.txt  find_coplanar.ipynb  make_tables.ipynb  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  setup.cfg  setup.py  temp.ipynb  test.ipynb  test_families.ipynb  test_sorting.ipynb
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements.txt  requirements3.10.txt  requirements3.11.txt  requirements3.12.txt  requirements3.13.txt  requirements3.8.txt  requirements3.9.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml  PublishPyPI.yaml  style.yaml  update_pipfiles.yaml
CMake/: CMakeLists.txt
coxeter/: MathematicaToPython.py  __doctest_fixtures.py  __init__.py  damasceno.py  ft.py  io.py  science.1220869.json  shape_getters.py  shapemoves.py  shapes.py  symmetry.py
coxeter/bentley_ottman/: poly_point_isect.py
coxeter/bentley_ottmann/: poly_point_isect.py
coxeter/common_shapes/: Cube.py  Dodecahedron.py  HexagonalPrism.py  ObtuseGoldenRhombohedron.py  Octahedron.py  PentagonalPrism.py  RhombicDodecahedron.py  SquarePyramid.py  Tetrahedron.py  TriangularDipyramid.py  TriangularPrism.py  TruncatedCube.py  TruncatedOctahedron.py  TruncatedTetrahedron67.py  TruncatedTetrahedron90.py
coxeter/families/: __init__ 2.py  __init__.py  common 2.py  common.py  common_families.py  doi_data_repositories.py  plane_shape_families.py  shape_family.py  tabulated_shape_family.py
coxeter/families/data/: MathematicaToPython.py  _previous_science1220869.json  archimedean.json  catalan.json  johnson.json  platonic.json  prism_antiprism.json  pyramid_dipyramid.json  science1220869.json
coxeter/polytri/: polytri.py
coxeter/shape_classes/: __init__.py  base_classes.py  circle.py  convex_polygon.py  convex_polyhedron.py  convex_spheropolygon.py  convex_spheropolyhedron.py  ellipse.py  ellipsoid.py  polygon.py  polyhedron.py  sphere.py  spheropolygon.py  utils.py
coxeter/shape_families/: __init__.py  common_families.py  data_repositories.py  doi_data_repositories.py  plane_shape_families.py  shape_family.py  tabulated_shape_family.py
coxeter/shape_families/data/: MathematicaToPython.py  platonic.json  science1220869.json
coxeter/shapes/: __init__.py  _distance2d.py  _distance3d.py  base_classes.py  circle.py  convex_polygon.py  convex_polyhedron.py  convex_spheropolygon.py  convex_spheropolyhedron.py  ellipse.py  ellipsoid.py  polygon.py  polyhedron.py  sphere.py  utils.py
doc/: Makefile  environment.yml  requirements.txt
doc/source/: .coxeter 3.bib.icloud  changelog.rst  conf.py  coxeter.bib  coxeter.common_shapes.rst  coxeter.rst  coxeter.shape_classes.rst  coxeter.shape_families.rst  credits.rst  development.rst  euclid.bib  euclid.common_shapes.rst  euclid.polytri.rst  euclid.rst  euclid.shape_classes.rst  examples.rst  index.rst  installation.rst  introduction.rst  license.rst  module-ft.rst  module-shape-getters.rst  modules.rst  package-euclid.rst  package-families.rst  package-shape-classes.rst  package-shape-families.rst  package-shapes.rst  quickstart.rst  table-archimedean-A01-A08.rst  table-archimedean-A09-A13.rst  table-archimedean.rst  table-catalan-C01-C08.rst  table-catalan-C09-C13.rst  table-catalan.rst  table-johnson-J01-J08.rst  table-johnson-J09-J16.rst  table-johnson-J17-J24.rst  table-johnson-J25-J32.rst  table-johnson-J33-J40.rst  (+19 more)
doc/source/_data/: prismantiprism.csv  prismantiprism_antiprisms.csv  prismantiprism_prisms.csv  pyramiddipyramid.csv  science.1220869.archimedean.csv  science.1220869.archimedean_A01-A08.csv  science.1220869.archimedean_A09-A13.csv  science.1220869.catalan.csv  science.1220869.catalan_C01-C08.csv  science.1220869.catalan_C09-C13.csv  science.1220869.johnson.csv  science.1220869.johnson_J01-J08.csv  science.1220869.other.csv  (+15 more)
euclid/: MathematicaToPython.py  __init__.py  damasceno.py  form_factors.py  ft.py  graveyard.py  poly.py  polygon.py  polyhedron.py  quaternion_tools.py  science.1220869.json  shapes.py  symmetry.py  symmetry2.py  utils.py
euclid/FreudShape/: Cube.py  Dodecahedron.py  HexagonalPrism.py  ObtuseGoldenRhombohedron.py  Octahedron.py  PentagonalPrism.py  RhombicDodecahedron.py  SquarePyramid.py  Tetrahedron.py  TriangularDipyramid.py  TriangularPrism.py  TruncatedCube.py  TruncatedOctahedron.py  TruncatedTetrahedron67.py  TruncatedTetrahedron90.py  __init__.py
euclid/common_shapes/: Cube.py  Dodecahedron.py  HexagonalPrism.py  ObtuseGoldenRhombohedron.py  Octahedron.py  PentagonalPrism.py  RhombicDodecahedron.py  SquarePyramid.py  Tetrahedron.py  TriangularDipyramid.py  TriangularPrism.py  TruncatedCube.py  TruncatedOctahedron.py  TruncatedTetrahedron67.py  TruncatedTetrahedron90.py  __init__.py
euclid/shape_classes/: __init__.py  circle.py  convex_polygon.py  convex_polyhedron.py  convex_spheropolyhedron.py  ellipse.py  ellipsoid.py  polygon.py  polyhedron.py  sphere.py  spheropolygon.py
paper/: paper.bib  paper.md
paper/figure1/: .Figure1 2.ai.icloud  .Figure1.ai.icloud  Figure1.ai
shapelib/: science.1220869.json
src/: CMakeLists.txt  greet.cpp  greet.h  greet_ext.cpp
tests/: conftest.py  requirements.in  requirements.txt  test_circle.py  test_docstrings.py  test_ellipse.py  test_ellipsoid.py  test_form_factor.py  test_ft.py  test_io.py  test_plato.py  test_polygon.py  test_polyhedron.py  test_shape.py  test_shape_families.py  test_shape_getters.py  test_shapemoves.py  test_sphere.py  test_spheropolygon.py  test_spheropolyhedron.py  test_utils.py  utils.py
tests/control/: convex_polyhedron.html  convex_polyhedron.off  convex_polyhedron.ply  convex_polyhedron.stl  convex_polyhedron.vtk  convex_polyhedron.x3d  polyhedron.html  polyhedron.off  polyhedron.ply  polyhedron.stl  polyhedron.vtk  polyhedron.x3d
(+165 files in other folders)
